fix: test for post comment